solved a bug where error was not showing for duplicate email while signing up

--- a/src/scss/components/_postForm.scss
+++ b/src/scss/components/_postForm.scss
@@ -22,6 +22,15 @@
   width: 100%;
 }
 
+.delete-photo-btn {
+  background-color: #5600ac;
+  color: white;
+  border: none;
+  padding: 0.5rem;
+  cursor: pointer;
+  margin-bottom: 0.5rem;
+}
+
 .post-input {
   width: 80%;
   height: 70px;
